# train-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
k8s/train-bot/: deployment.yaml  kustomization.yaml  secret-example.yaml
manifests/: deployment.yaml
src/: main.py
src/train_bot/: __init__.py  app.py  cli.py  commands.py  config.py  formatter.py  models.py  providers.py  rtt_api.py  transport_api.py
worker/: dev.sh  package-lock.json  package.json  test-update.json  tsconfig.json  wrangler.toml
worker/src/: commands.ts  config.ts  formatter.ts  index.ts  models.ts  telegram.ts
worker/src/providers/: fallback.ts  rtt.ts  transportApi.ts  types.ts
